--- a/themes/cvd/layouts/_default/single.html
+++ b/themes/cvd/layouts/_default/single.html
@@ -1,9 +1,31 @@
 {{ define "main" }}
-    {{- partial "header.html" . -}}
+    <!--{{- partial "header.html" . -}}-->
     
     <div class="container">
         <div class="row">
-            <div class="col">
+            <div class="col-sm-3">
+                <div class="sidebar">
+                    <h1>Chris van Dal</h1>
+                    <ul class="list-group">
+                        <li class="list-group-item"><i class="fas fa-arrow-right fa-fw"></i> <a href="/">Home</a></li>
+                        <li class="list-group-item"><i class="fas fa-arrow-right fa-fw"></i> <a href="/posts">Blog</a></li>
+                    </ul>
+
+                    <h1>Recent Posts</h1>
+                    <ul class="list-group">
+                        {{ range first 5 .Site.RegularPages}}
+                            <li class="list-group-item"><i class="fas fa-arrow-right fa-fw"></i> <a href="{{ .RelPermalink }}">{{ .Title }}</a></li>
+                        {{ end }}
+                    </ul>
+
+                    <h1>Tags</h1>
+                    {{ range .Site.Taxonomies.tags }}
+                        <a href="{{ .Page.Permalink }}">{{ .Page.Title }}</a> <span class="badge">{{ .Count }}</span>
+                    {{ end }}
+                </div>
+            </div>
+
+            <div class="col-sm-9">
                 <article>
                     <h1><a href="{{ .RelPermalink }}">{{ .Title }}</a></h1>
                     
