--- a/themes/cvd/static/css/main.css
+++ b/themes/cvd/static/css/main.css
@@ -43,8 +43,8 @@ a:hover {
     text-decoration: none;
 }
 
-article, .sidebar {
-    padding-bottom: 100px;
+article {
+    padding: 0 0 100px 100px;
 }
 
 code, pre code {
@@ -98,6 +98,10 @@ button:active, button:focus {
 
 .navbar-toggler {
     background-color: #7fdbff;
+}
+
+.sidebar ul {
+    margin-bottom: 50px;
 }
 
 .tag:hover, .read-more:hover {
