--- a/themes/cvd/layouts/partials/header.html
+++ b/themes/cvd/layouts/partials/header.html
@@ -1,16 +1,11 @@
-<nav class="navbar navbar-expand-lg">
+<nav class="navbar navbar-default">
     <div class="container">
-        <a class="navbar-brand" href="/">{{ .Site.Title }}</a>
-
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <i class="fas fa-hamburger"></i>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item "><a class="nav-link" href="/">Home</a></li>
-                <li class="nav-item "><a class="nav-link" href="/posts">Blog</a></li>
-            </ul>
+            {{- partial "nav.html" . -}}
         </div>
     </div>
 </nav>
