--- a/themes/cvd/layouts/_default/single.html
+++ b/themes/cvd/layouts/_default/single.html
@@ -3,11 +3,13 @@
     
     <div class="container">
         <div class="row">
-            <div class="col-sm-4">
+            <div class="col-sm-3">
                 <div class="sidebar">
                     {{- partial "nav.html" . -}}
                 </div>
             </div>
+
+            <div class="col-sm-1"></div>
 
             <div class="col-sm-8">
                 <article>
