--- a/themes/cvd/static/css/main.css
+++ b/themes/cvd/static/css/main.css
@@ -47,8 +47,12 @@ article {
     padding: 0 0 100px 0;
 }
 
-code, pre code {
+code {
     color: #7fdbff;
+}
+
+pre {
+    background-color: #111 !important;
 }
 
 button:active, button:focus {
