--- a/themes/cvd/layouts/_default/single.html
+++ b/themes/cvd/layouts/_default/single.html
@@ -1,26 +1,22 @@
-{{ define "main" }}
-    {{- partial "header.html" . -}}
-    
+{{ define "body" }}
+    {{ partial "jumbotron.html" . }}
+
     <div class="container">
         <div class="row">
-            <div class="col-sm-3">
-                <div class="sidebar">
-                    {{- partial "nav.html" . -}}
-                </div>
+            <div class="col-sm-2">
+                <aside>
+                    <div class="text-center">
+                        <img src="/images/me.jpg" alt="Chris van Dal">
+                        <p>{{ .Site.Title }} <br /> {{ .Date.Format "January 2, 2006" }}</p>
+                    </div>
+                </aside>
             </div>
 
-            <div class="col-sm-1"></div>
-
-            <div class="col-sm-8">
+            <div class="col-sm-10">
                 <article>
-                    <h1><a href="{{ .RelPermalink }}">{{ .Title }}</a></h1>
-                    
-                    <p><i class="far fa-calendar-alt fa-fw"></i> <span class="date">{{ .Date.Format "January 2, 2006" }}</span></p>
-                    <p><i class="fas fa-tags fa-fw"></i> {{ range .Params.Tags }} <span class="badge tag"><a href="/tags/{{ . | urlize }}">#{{ . }}</a></span> {{ end }}</p>
-                    
-                    <div class="content">
-                        {{ .Content }}
-                    </div>
+                    <h1>{{ .Title }}</h1>
+
+                    {{ .Content }}
                 </article>
             </div>
         </div>
