--- a/themes/cvd/layouts/index.html
+++ b/themes/cvd/layouts/index.html
@@ -1,23 +1,13 @@
-{{ define "main" }}
+{{ define "body" }}
     <div class="intro">
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <img class="me" src="{{ .Site.BaseURL }}/images/me.jpg" alt="Chris van Dal" />
-                </div>
-                <div class="col">
-                    <div class="about">
-                        <h1>Chris van Dal</h1>
+        <div class="jumbotron white-bg">
+            <div class="container">
+                <h1>{{ .Site.Params.Author }}</h1>
+                <h4>{{ .Site.Params.Description }}</h4>
 
-                        <p>C#, PowerShell, Windows, Linux, Baseball, Karate, '80s Japanese Cars, Music, and Games</p>
+                <hr class="my-4">
 
-                        <a href="https://github.com/cvandal"><i class="fab fa-github"></i></a>
-                        <a href="https://twitter.com/cvandal1985"><i class="fab fa-twitter"></i></a>
-                        <a href="https://www.linkedin.com/in/cvandal"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="mailto:chris@cvd.id.au"><i class="fas fa-envelope"></i></a>
-                        <a href="/posts"><i class="fas fa-blog"></i></a>
-                    </div>
-                </div>
+                <p><a href="https://github.com/cvandal"><i class="fab fa-github rainbow-text"></i></a> <a href="https://twitter.com/cvandal1985"><i class="fab fa-twitter rainbow-text"></i></a> <a href="https://www.linkedin.com/in/cvandal"><i class="fab fa-linkedin-in rainbow-text"></i></a> <a href="https://hangops.slack.com"><i class="fab fa-slack rainbow-text"></i></a> <a href="mailto:chris@cvd.id.au"><i class="fas fa-envelope rainbow-text"></i></a> <a href="/blog"><i class="fas fa-blog rainbow-text"></i></a></p>
             </div>
         </div>
     </div>
