removed slack icon

--- a/themes/cvd/layouts/index.html
+++ b/themes/cvd/layouts/index.html
@@ -7,7 +7,7 @@
 
                 <hr class="my-4">
 
-                <p><a href="https://github.com/cvandal"><i class="fab fa-github rainbow-text"></i></a> <a href="https://twitter.com/cvandal1985"><i class="fab fa-twitter rainbow-text"></i></a> <a href="https://www.linkedin.com/in/cvandal"><i class="fab fa-linkedin-in rainbow-text"></i></a> <a href="https://hangops.slack.com"><i class="fab fa-slack rainbow-text"></i></a> <a href="mailto:chris@cvd.id.au"><i class="fas fa-envelope rainbow-text"></i></a> <a href="/blog"><i class="fas fa-blog rainbow-text"></i></a></p>
+                <p><a href="https://github.com/cvandal"><i class="fab fa-github rainbow-text"></i></a> <a href="https://twitter.com/cvandal1985"><i class="fab fa-twitter rainbow-text"></i></a> <a href="https://www.linkedin.com/in/cvandal"><i class="fab fa-linkedin-in rainbow-text"></i></a> <a href="mailto:chris@cvd.id.au"><i class="fas fa-envelope rainbow-text"></i></a> <a href="/blog"><i class="fas fa-blog rainbow-text"></i></a></p>
             </div>
         </div>
     </div>
