move icons and search into partials

--- a/themes/cvd/layouts/_default/single.html
+++ b/themes/cvd/layouts/_default/single.html
@@ -4,10 +4,16 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-2">
-                <aside>
+                <aside class="sticky-top">
                     <div class="text-center">
                         <img src="/images/me.jpg" alt="Chris van Dal">
                         <p>{{ .Site.Title }} <br /> {{ .Date.Format "January 2, 2006" }}</p>
+                        <a href="/blog">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-back-up" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                                <path d="M9 13l-4 -4l4 -4m-4 4h11a4 4 0 0 1 0 8h-1" />
+                            </svg>
+                        </a>
                     </div>
                 </aside>
             </div>
