--- a/themes/cvd/static/css/site.css
+++ b/themes/cvd/static/css/site.css
@@ -28,15 +28,14 @@ a, a:hover {
     background-color: #fff !important;
 }
 
-@media (min-width: 992px) {
-    .intro {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        -moz-transform: translateX(-50%) translateY(-50%);
-        -webkit-transform: translateX(-50%) translateY(-50%);
-        transform: translateX(-50%) translateY(-50%);
-    }
+.intro {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -moz-transform: translateX(-50%) translateY(-50%);
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
+    width: 100%;
 }
 
 .flex-container {
