--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -17,8 +17,7 @@ Yellow       = #f1fa8c
 @import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap");
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
-    sans-serif, Apple Color Emoji, Segoe UI Emoji;
+  font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif;
   font-size: 1rem;
   color: #f8f8f2;
   background: #242631;
